--- a/lab9/servlet/pom.xml
+++ b/lab9/servlet/pom.xml
@@ -10,6 +10,15 @@
 
     <packaging>war</packaging>
 
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.1.1</version>
+        <configuration>
+            <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+    </plugin>
+
     <dependencies>
 
         <dependency>
